# srcsync

./: .gitlab-ci.yml  CMakeLists.txt  README.md  configure.sh  srcsync.acorn
depot/: acrosync-cmake.patch  acrosync-publicKeyFile.patch  acrosync.cmake
src/: AcrosyncWorker.cc  FSWatchMonitorDirectory.cc  FileSyncWorker.cc  MonitorDirectory.cc  PocoMonitorDirectory.cc  Queue.cc  RsyncWorker.cc  SourceSync.cc  SyncWorker.cc  psync.cc
src/include/: AcrosyncWorker.h  FSWatchMonitorDirectory.h  MonitorDirectory.h  PocoMonitorDirectory.h  Queue.h  RsyncWorker.h  SourceSync.h  config.h
tests/: main.cc  newfile.cc
